recallable/tests/ui/model_fail_enum_skip_variant.rs
use recallable::recallable_model;

#[recallable_model]
enum InvalidModelSkippedEnum {
    Ready {
        #[recallable(skip)]
        sticky: u8,
        value: u8,
    },
}

fn main() {}
